@@ -16,7 +16,8 @@
 - Fixed dashboard results not to list information for ineligible lessons
 - Fixed forum list not displaying when the user does not have lessons
 - Fixed complete unit with question issue
- 
+- Fixed "Passed all tests" completion condition displaying form data
+- Fixed completion conditions displaying units and tests even if the lesson doesn't have any
 
 === Version 3.6.0 build 5751 ===
 eFront 3.6.0 is a completely new version, introducing many important new features
